# myconfig

./: README.md
cmake/: CMakeLists.txt  README.md  config.h.in  tldlib-CMakeLists.txt
emacs/: .emacs  .emacs.ubuntu  .emacs.windows  README.md
emacs/.emacs.d/: init.el  init.el~
emacs/.emacs.d/lisp/: init-m-num.el  init-mysetting.el  init-py-ide.el  init-shortcut.el  init-theme.el  init-yasnippet.el
emacs/plugins/: sudo-reopen.el
github/: README.md
qtcreator/: README.md
sh/: build_qt55-linux-x64.sh  install_flashplayer.sh
sh/TianQ/: libusb-1.0.19-build.sh  qte-4.8.6-build.sh
vim/: .vimrc  README.md  vim_build.sh
vim/.vim/plugin/: cmake-project.vim
